<resources>
    <string name="app_name">MBTA Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tracker">MBTA Buddy</string>
    <string name="google_app_id">711856990816</string>
    <string-array name="drawer_menu_labels">
        <item>Map</item>
        <item>Favorites</item>
        <item>MBTA Map</item>
        <item>MBTA Performance</item>
        <!--item>Settings</item-->
    </string-array>
    <string name="drawer_open">Open Nav Drawer</string>
    <string name="drawer_close">Close Nav Drawer</string>
    <string name="google_maps_key">AIzaSyBK7kLLVvVV4Yn-thFj8rtw1OfHu0XiYe8</string>
    <string name="google_maps_directions_api_key">AIzaSyCqzrBlSHjvVFgB4hninp6g0H6vwxTB1eU</string>
    <string name="title_activity_station">StationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove_menu_favorites">Remove Favorites</string>
    <string name="done_remove_menu_favorites">Done Removing</string>
    <string name="add_menu_favorites">Add Favorite</string>
    <string name="search_text">Search</string>
    <string name="no_network_string">No Network Connection</string>
    <string name="ph">PlaceHolder</string>
    <string name="sub_reli">Subway Reliability</string>
    <string name="reli_target">(Reliability/Target)</string>
    <string name="bus_reli_title">Bus Reliability</string>
    <string name="com_rail_reli_title">Commuter Rail Reliability</string>
    <string name="more_stats_mbta">More MBTA Statistics</string>
    <string name="exit">Exit</string>
    <string name="back_text"><![CDATA[<]]></string>
    <string name="title_activity_maps">Map</string>

</resources>
